--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,14 +12,14 @@
     <string name="ACCOUNT_QQ">QQ</string>
     <string name="ACCOUNT_XL">Weibo</string>
     <string name="ADD_EQUIPMENT">Click \"+\" to add your device</string>
-    <string name="ADD_ERR_INFO">Unable to connect to the network</string>
+    <string name="ADD_ERR_INFO">Unable to connect to the network \n Please click the \"Back\" home page to view the status of the device</string>
     <string name="ADD_FAILED">Failed to add, please retry.</string>
     <string name="ADD_FAILED_1">Failed to add</string>
     <string name="ADD_SHARE">Share</string>
     <string name="ADD_SUCC_1">Added successfully</string>
     <string name="AGREE">I read and agree</string>
     <string name="ALARM">Alarm sound</string>
-    <string name="ALERTS">Alarm sound</string>
+    <string name="ALERTS">Alert sounds</string>
     <string name="ALIAS">Nickname</string>
     <string name="ALLDAY">Allday</string>
     <string name="ALTER">Alter</string>
@@ -233,7 +233,7 @@
     <string name="FROME">From</string>
     <string name="Fail_Record">Fail to record</string>
     <string name="Feb">Feb.</string>
-    <string name="Feedback_MessageFailed">Message failed to send</string>
+    <string name="Feedback_MessageFailed">Message failed</string>
     <string name="Feedback_Sending">sending&#8230;</string>
     <string name="Formatting">Formatting</string>
     <string name="GENERAL">General</string>
@@ -267,9 +267,9 @@
     <string name="IN_APP_VIBRATE">In&#8211;APP Vibrate</string>
     <string name="IP_Address">IP address</string>
     <string name="I_KNOW">OK</string>
-    <string name="Instructions_Sent">Instructions sent</string>
+    <string name="Instructions_Sent">Command sent</string>
     <string name="Item_ConnectionFail">Failed to connect network</string>
-    <string name="Item_LoadFail">Failed to load</string>
+    <string name="Item_LoadFail">Load Fail</string>
     <string name="Item_NoContents">No content</string>
     <string name="JUST_NOW">Just now</string>
     <string name="Jan">Jan.</string>
@@ -286,8 +286,8 @@
     <string name="LIGTH_LABEL_0_2">Blue light, WiFi Online</string>
     <string name="LIGTH_LABEL_1_1">Blue blinking, Connect to network</string>
     <string name="LIGTH_LABEL_1_2">Blue light, 3G/4G Online</string>
-    <string name="LIGTH_LABEL_2_1">Blinking,Battery is less</string>
-    <string name="LIGTH_LABEL_2_2">Blue light, Have electricity</string>
+    <string name="LIGTH_LABEL_2_1">Blinking, Low battery</string>
+    <string name="LIGTH_LABEL_2_2">Blue light, Powered</string>
     <string name="LIVE_DATA">Cellular network,Pls note data usage</string>
     <string name="LOADING">Loading&#8230;</string>
     <string name="LOCAL_NOTIFICATION_AndroidMSG">Please go to Phone\'s \"Settings\"&#8211;\"Notifications\", find %s and open \'Notifications\'</string>
@@ -414,9 +414,9 @@
     <string name="PowerLight_SteadyBlue">Steady blue: Booting</string>
     <string name="Qiaoan_Blinking">After being powered on, wait for the light to flicker in red</string>
     <string name="Qiaoan_ResetDevice">Reset Device</string>
-    <string name="Qiaoan_VoiceTips">Not flickers in red?</string>
-    <string name="Qiaoan_VoiceTips2">Already flickered in red</string>
-    <string name="Qiaoan_VoiceTips3">Use needle to long press the RESET button for 5s until the light flicers in red</string>
+    <string name="Qiaoan_VoiceTips">No voice prompt?</string>
+    <string name="Qiaoan_VoiceTips2">Already heard voice prompt</string>
+    <string name="Qiaoan_VoiceTips3">Long press the RESET button by needle for 5s until the light flicers in red</string>
     <string name="Qzone_QQ">Qzone</string>
     <string name="READ_AGREEMENT">Please read the agreement first</string>
     <string name="RECEIVE_SMS">Used for logining and retrieving password</string>
@@ -575,7 +575,7 @@
     <string name="SYSTEM_MSG">System notifications</string>
     <string name="SYSTME_VERSION">System Version</string>
     <string name="Sdcard_AvailableCapacity">Available</string>
-    <string name="Sdcard_TotalCapacity">Total</string>
+    <string name="Sdcard_TotalCapacity">Total Capacity</string>
     <string name="Search">Search</string>
     <string name="Sep">Sep.</string>
     <string name="ShareTo">Share to %s</string>
@@ -601,7 +601,7 @@
     <string name="Start_instructions_F">2. Bind account</string>
     <string name="Start_instructions_G">Attention \"加菲狗官微服务\" Official Accounts, enter the main page, click the menu bar of the service, select the binding account.</string>
     <string name="Start_instructions_H">Bind account</string>
-    <string name="Start_instructions_I">Please enter the Clever dog email account to bind, such as forget the password please go to the Clever dog client back</string>
+    <string name="Start_instructions_I">Please enter dog Cleverdog accounts \"mobile phone or email accounts\ "for binding, if you forget the password please back to Cleverdog client</string>
     <string name="Switch_Mode">please switch to direct mode to view shooting content</string>
     <string name="Switch_Mode_Pop">please switch current network shooting content to direct mode</string>
     <string name="Switch_Off">always off</string>
@@ -664,7 +664,7 @@
     <string name="Tap1_AddDevice_WifiConfTips">Select WiFi</string>
     <string name="Tap1_AddDevice_disconnected">Disconnected, please add device again.</string>
     <string name="Tap1_AddDevice_openlocationservice">Enable Location Services in Setting</string>
-    <string name="Tap1_AddDevice_refreshWifi">No device found, try to refresh the WiFi list.</string>
+    <string name="Tap1_AddDevice_refreshWifi">No device found, please refresh the WiFi list.</string>
     <string name="Tap1_AddDevice_tips">Stop device configuration and exit?</string>
     <string name="Tap1_Add_Tips">Click here to add device</string>
     <string name="Tap1_AddedDeviceTips">Device has been bound with current account</string>
@@ -677,36 +677,36 @@
     <string name="Tap1_Album_Share_Description">Add description</string>
     <string name="Tap1_Album_Share_NotInstalledTips">\"%s\" not installed, please install it and try again</string>
     <string name="Tap1_Album_Share_To_Daily_Great">The shared content will be saved to\"My Favorite \"</string>
-    <string name="Tap1_BigPic_FavoriteTips">Collect pics in\"My Favorite \"</string>
+    <string name="Tap1_BigPic_FavoriteTips">Collected pics in\"My Favorite \"</string>
     <string name="Tap1_CameraFun_Standby">Standby</string>
-    <string name="Tap1_CameraFun_Standby_Description">Start standby to hibernate, that will be unable to watch live, check history videos, protect and alert, Video settings, time&#8211;lapse photography and etc.</string>
-    <string name="Tap1_CameraFun_Standby_OnTips">Time&#8211;lapse photographing, unable to standby</string>
+    <string name="Tap1_CameraFun_Standby_Description">In standby mode, cannot use live video,records, protection and alert, Video settings, time&#8211;lapse photography and etc.</string>
+    <string name="Tap1_CameraFun_Standby_OnTips">During Time&#8211;lapse photographing, unable to standby</string>
     <string name="Tap1_CameraFun_Timelapse">Time&#8211;lapse photography</string>
     <string name="Tap1_CameraFun_Timelapse_Countdown">Remaining time</string>
     <string name="Tap1_CameraFun_Timelapse_EndButton">Finish</string>
     <string name="Tap1_CameraFun_Timelapse_End_FailTips">Not enough for merging, to end recording will be result with nothing</string>
     <string name="Tap1_CameraFun_Timelapse_End_NotStartTips">Not start shooting yet, cancel or not?</string>
-    <string name="Tap1_CameraFun_Timelapse_End_Tips">Not up to the preset time, sure to finish recording?</string>
+    <string name="Tap1_CameraFun_Timelapse_End_Tips">Not up to the preset time, sure to end recording?</string>
     <string name="Tap1_CameraFun_Timelapse_Filming">Shooting</string>
-    <string name="Tap1_CameraFun_Timelapse_GoClose">To turn off</string>
-    <string name="Tap1_CameraFun_Timelapse_GoWatch">Take a look</string>
-    <string name="Tap1_CameraFun_Timelapse_Interval">Interval</string>
+    <string name="Tap1_CameraFun_Timelapse_GoClose">Turn off</string>
+    <string name="Tap1_CameraFun_Timelapse_GoWatch">Have a look</string>
+    <string name="Tap1_CameraFun_Timelapse_Interval">Interval time</string>
     <string name="Tap1_CameraFun_Timelapse_NotStart">Coming</string>
-    <string name="Tap1_CameraFun_Timelapse_OnTips">Time&#8211;lapse photography will turnoff automatically when shooting done and save it in\"My Favorite \"</string>
+    <string name="Tap1_CameraFun_Timelapse_OnTips">Time&#8211;lapse photography will turnoff automatically after interval shooting and save pics in\"My Favorite \"</string>
     <string name="Tap1_CameraFun_Timelapse_RecordTime">Shooting length</string>
-    <string name="Tap1_CameraFun_Timelapse_Setting">Take one more shoot</string>
-    <string name="Tap1_CameraFun_Timelapse_StandbyTips">Start time&#8211;lapse photography before close standby</string>
+    <string name="Tap1_CameraFun_Timelapse_Setting">Shoot one more</string>
+    <string name="Tap1_CameraFun_Timelapse_StandbyTips">Close standby mode and then start time&#8211;lapse photography</string>
     <string name="Tap1_CameraFun_Timelapse_Start">Start now</string>
-    <string name="Tap1_CameraFun_Timelapse_StartTime">Start time</string>
-    <string name="Tap1_CameraFun_Timelapse_StartTimeFail">Earlier than current time, please reset</string>
+    <string name="Tap1_CameraFun_Timelapse_StartTime">Begin time</string>
+    <string name="Tap1_CameraFun_Timelapse_StartTimeFail">please reset when start time is earlier than current time</string>
     <string name="Tap1_CameraFun_Timelapse_Startnow">Start now</string>
     <string name="Tap1_CameraFun_Timelapse_Synthesis">Merging</string>
     <string name="Tap1_CameraFun_Timelapse_SynthesisTips">Merged done, check in the \"My Favorite \"</string>
-    <string name="Tap1_CameraFun_Timelapse_Tips">Need to turn off standby before time&#8211;lapse photographing, sure?</string>
+    <string name="Tap1_CameraFun_Timelapse_Tips">Need to turn off standby mode before time&#8211;lapse photographing, sure?</string>
     <string name="Tap1_CameraFun_Timelapse_TipsOption">Sure</string>
-    <string name="Tap1_CameraFun_Timelapse_document">Get down more wonderful moments with time&#8211;lapse photography</string>
+    <string name="Tap1_CameraFun_Timelapse_document">Get more wonderful moments with time&#8211;lapse photography</string>
     <string name="Tap1_CameraFun_Timelapse_hours">%hours</string>
-    <string name="Tap1_CameraFun_UninitializedTips">Failed to read Micro SD card</string>
+    <string name="Tap1_CameraFun_UninitializedTips">Fail to read Micro SD card</string>
     <string name="Tap1_CameraFun_VideoDirection">Reverse</string>
     <string name="Tap1_Camera_BackLiveTips">Back to live</string>
     <string name="Tap1_Camera_Front">Front</string>
@@ -722,7 +722,7 @@
     <string name="Tap1_Camera_Playback">Recording</string>
     <string name="Tap1_Camera_Record_EndTips">The end</string>
     <string name="Tap1_Camera_RecordingFailed">Recording failed</string>
-    <string name="Tap1_Camera_SetProtectionTips">Set the Protection</string>
+    <string name="Tap1_Camera_SetProtectionTips">Setting the Protection</string>
     <string name="Tap1_Camera_SpaceUsage">Space usage(%1$s/%2$s)</string>
     <string name="Tap1_Camera_TCPconnected">Camera connected with app via internet</string>
     <string name="Tap1_Camera_UDPconnected">Camera connected with app directly</string>
@@ -746,7 +746,7 @@
     <string name="Tap1_Disconnected">Disconnected</string>
     <string name="Tap1_DisconnectedPleaseCheck">Disconnected, please check network connection>></string>
     <string name="Tap1_DisconnectedPleaseChecked">Disconnected, please check network connection.</string>
-    <string name="Tap1_DoorFun_VoiceTips">Sounds will be out from the receiver</string>
+    <string name="Tap1_DoorFun_VoiceTips">Sounds will be out from the telephone receiver</string>
     <string name="Tap1_DoorFun_Waitting">Waiting&#8230;</string>
     <string name="Tap1_DownloadFirmwareFai">Download firmware failed</string>
     <string name="Tap1_DownloadFirmwareTips">Download will start shortly,please ensure that cellphone and device are connecting with the same WIFI</string>
@@ -813,14 +813,14 @@
     <string name="Tap1_iHome_ClearRecord">Clear the record</string>
     <string name="Tap1_iHome_NotAssociated">Not associated</string>
     <string name="Tap1_iHome_disassociate">Disassociate</string>
-    <string name="Tap1_shareDevice_canceledshare">This device has canceled sharing</string>
+    <string name="Tap1_shareDevice_canceledshare">This device has been canceled sharing</string>
     <string name="Tap1_share_tips">Invite you to be my friends and click %1$s to download and install %2$s app.</string>
     <string name="Tap1a_DownloadInstall">Download and install(%s)</string>
     <string name="Tap2_Index_DemoVideo">Demo video</string>
     <string name="Tap2_Index_Greetings">Everyday deserves to be recorded</string>
     <string name="Tap2_Index_No3GCameraTips">Only support 3G camera</string>
-    <string name="Tap2_Index_OpenTimelapse">To start</string>
-    <string name="Tap2_Index_Open_NoDevice">To start this function needs device to be bound firstly, to bind or not?</string>
+    <string name="Tap2_Index_OpenTimelapse">Start</string>
+    <string name="Tap2_Index_Open_NoDevice">Device need to be bound before start this function, to bind or not?</string>
     <string name="Tap2_Index_Open_NoDeviceOption">Yes</string>
     <string name="Tap2_NoPermissions_FailedDownloadTips">Failed to get SD card permissions.Download canceled</string>
     <string name="Tap2_Share_Moments">Moments</string>
@@ -840,8 +840,8 @@
     <string name="Tap3_DeleteFriends">Delete friends</string>
     <string name="Tap3_EmailCancel">Canceled</string>
     <string name="Tap3_Feedback">Help &amp; Feedback</string>
-    <string name="Tap3_Feedback_AutoReply">Got your feedback and we\'ll reply asap.</string>
-    <string name="Tap3_Feedback_AutoTips">Welcome your comments or suggestions</string>
+    <string name="Tap3_Feedback_AutoReply">Thanks for your feedback and we\'ll reply asap.</string>
+    <string name="Tap3_Feedback_AutoTips">Welcome left your comments or suggestions</string>
     <string name="Tap3_Feedback_Clear">Clear</string>
     <string name="Tap3_Feedback_ClearTips">Clear messages?</string>
     <string name="Tap3_Feedback_Resend">Resend?</string>
@@ -875,11 +875,11 @@
     <string name="Tap3_Friends_Myaccount">My account</string>
     <string name="Tap3_Friends_NoBindTips">Using this function needs to bind email first.</string>
     <string name="Tap3_Friends_Share">Share with%s</string>
-    <string name="Tap3_Friends_Tips">Add friends makes us closer</string>
+    <string name="Tap3_Friends_Tips">Adding friends makes us closer</string>
     <string name="Tap3_Friends_UserInfo">Personal details</string>
     <string name="Tap3_Friends_UserInfo_Add">Added as friends</string>
     <string name="Tap3_Friends_UserInfo_ModName">Change the remarked name</string>
-    <string name="Tap3_Friends_UserInfo_ModName_Fail">To save or not?</string>
+    <string name="Tap3_Friends_UserInfo_ModName_Fail">Save or not?</string>
     <string name="Tap3_Friends_UserInfo_ModName_NoSave">No</string>
     <string name="Tap3_Friends_UserInfo_Name">Remark the name</string>
     <string name="Tap3_Friends_UserInfo_ShareDevice_Fail">Please bind device first</string>
@@ -899,7 +899,7 @@
     <string name="Tap3_ShareDevice_Delete">Cancel</string>
     <string name="Tap3_ShareDevice_DeleteSucces">Cancelled</string>
     <string name="Tap3_ShareDevice_DeleteTips">Cancel the sharing with %s?</string>
-    <string name="Tap3_ShareDevice_ExceedTips">Up to 5 users can be shared with</string>
+    <string name="Tap3_ShareDevice_ExceedTips">Shared with up to 5 users</string>
     <string name="Tap3_ShareDevice_FailTips">Failed to share</string>
     <string name="Tap3_ShareDevice_Friends">Share with friends</string>
     <string name="Tap3_ShareDevice_Friends_FailTips">%d users failed to share</string>
@@ -929,8 +929,8 @@
     <string name="Tap3_Userinfo_Photos">Photos</string>
     <string name="Tap3_Userinfo_PhotosSelected">Selected(%1$s/%2$s)</string>
     <string name="Tap3_Userinfo_UsePhoto">Use Photo</string>
-    <string name="Tap3_logout_tips">Are you sure to log out？</string>
-    <string name="Tap3_nickname_used">Used</string>
+    <string name="Tap3_logout_tips">Sure to log out？</string>
+    <string name="Tap3_nickname_used">nickname used</string>
     <string name="Tips_DeleteFail">Failed to delete</string>
     <string name="Tips_Device_ConnectFail">Failed to connect device</string>
     <string name="Tips_Device_TimeoutRetry">Timeout, please try again</string>
